# ats2-quicksorts

./: Makefile.am  Makefile.in  README  aclocal.m4  aminclude_static.am  ats2-quicksorts.pc.in  ats2-stable-quicksort.pc.in  autogen.sh  configure  configure.ac  make-test-arrays-patterns-stable-am.sh  make-test-arrays-patterns-unstable-am.sh  test-arrays-patterns-stable.am  test-arrays-patterns-unstable.am
quicksorts/CATS/: bptr.cats  quicksorts.cats  uptr.cats
quicksorts/DATS/: bptr.dats  stable-quicksort.dats  unstable-quicksort.dats  uptr.dats
quicksorts/DATS/SHARE/: quicksorts.share.dats
quicksorts/HATS/: stable-quicksort.hats  stable-quicksort_dats.hats  unstable-quicksort.hats  unstable-quicksort_dats.hats
quicksorts/SATS/: bptr.sats  stable-quicksort.sats  unstable-quicksort.sats  uptr.sats
stable-quicksort/CATS/: stable-quicksort.cats
stable-quicksort/DATS/: stable-quicksort.dats
stable-quicksort/HATS/: stable-quicksort.hats
stable-quicksort/SATS/: stable-quicksort.sats
tests/: test-arrays-patterns-stable.common.dats  test-arrays-patterns-stable.dats  test-arrays-patterns-unstable.common.dats  test-arrays-patterns-unstable.dats  test-arrays-patterns.dats  test-arrays-stability.dats  test-lists-stability.dats  test-random-arrays.dats  test-random-lists.dats
